changes for docker compose, added unecessary files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,16 @@ spring-boot/*.jar
 spring-boot/*.war
 spring-boot/*.ear
 spring-boot/HELP.md
-Dockerfile
-.dockerignore
+spring-boot/.dockerignore
+spring-boot/Dockerfile
+spring-boot/README.Docker.md
+spring-boot/.vscode/
+
+.vscode/
+
+flask/.dockerignore
+flask/Dockerfile
+flask/README.Docker.md
+flask/.vscode/
+
+versions.txt
