--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=shortener
-server.port=8080
+server.port=8100
+spring.datasource.initialization-mode=always
+spring.datasource.url=jdbc:mariadb://mariadb:3306/uri
