added toml for railway

--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "dockerfile"
-dockerfilePath = "docker-compose.yml"
+dockerfilePath = "docker-compose.yaml"
 
 [deploy]
 startCommand = "docker-compose up"
