--- a/spring/Dockerfile
+++ b/spring/Dockerfile
@@ -1,5 +1,10 @@
 FROM maven:3.9.9-amazoncorretto-21-alpine AS builder
 WORKDIR /app
+
+LABEL developer="V Anirudh"
+LABEL dependencies="springboot and mysql-connector-java"
+LABEL deployed="railway"
+
 COPY . .
 RUN mvn clean package -DskipTests && rm -rf ~/.m2
 
@@ -9,4 +14,3 @@ COPY --from=builder /app/target/*.jar app.jar
 EXPOSE 8100
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
-
