--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ spring-boot/.vscode/
 
 flask/.dockerignore
 flask/README.Docker.md
+spring-boot/Dockerfile
 flask/.vscode/
 flask/venv
 flask/__pycache__/
